--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/davik/Library/Android/sdk
-flutter.sdk=/Users/davik/Development/flutter
+sdk.dir=C:\\dev\\android-sdk
+flutter.sdk=C:\\dev\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
