--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  
+  # HTTP client for API calls
+  dio: ^5.4.0
+  
+  # Local storage for tokens
+  shared_preferences: ^2.2.2
+  
+  # JWT token decoding
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
